# rust-mysqldump

./: .env  .gitignore  Cargo.toml  README.md  log4rs.yml  run_once.cmd
src/: main.rs
src/config/: database.rs
src/utils/: output.rs
