[package]
name = "rust_mysqldump"
version = "0.1.1"
edition = "2021"
authors = ["Tom Shaw <dev@tomshaw.us>"]
description = "A command-line application for quickly backing up your MySQL databases."
license = "MIT"
documentation = "https://docs.rs/rust_mysqldump"
homepage = "https://github.com/tomshaw/rust-mysqldump"
repository = "https://github.com/tomshaw/rust-mysqldump"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
mysql = "25.0.1"
colored = "2.0.4"
cli-table = "0.4.7"
zip = "2.2.0"
chrono = "0.4.38"
log4rs = "1.3.0"
log = "0.4.22"
